super cool ref sheet update

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -49,9 +49,12 @@
         display: inline-block;
         margin-bottom: 10px;
       }
-      #clarifications br {
+      section br {
         display: block;
         margin: 5px 0;
+      }
+      #discord:is(:active, :focus) {
+        color: var(--g3);
       }
       @media only screen and (max-width: 1300px) {
         #clarifications-header {
@@ -67,28 +70,34 @@
         <img src="https://cdn.spax.zone/nahua_bananas_design_update_wip2.png">
         <!--<img src="/images/art/nahua-bananas-refsheet.png" alt="Reference sheet for Nahua (Na-hoo-wa), a light blue axolotl with dark blue, yellow, and orange accents. She's shown from the front (both clothed and nude) and back; she looks cheery in the clothed picture and flustered in the nude one, which is censored with an eye-popping emoji graphic. She's wearing shorts, kneesocks, a tanktop with an up arrow on it, and headphones. She is 5 feet 3 inches (160 centimeters) tall, 19 years old, and uses she/they pronouns.">
         <div id="ayo" title="ayo what you doin over there"></div>
-      -->
+        -->
       </div>
       Artist: 1LikeBananas<br>
       New ref is not 100% finalized! Expect labels and alt text soon.<br>
-      Old ref can be found <a href="https://cdn.spax.zone/nahua-ref-sheet.png">here</a>
+      Old ref can be found <a href="https://cdn.spax.zone/nahua-ref-sheet.png" target="_blank">here</a>
       <!--Alt text: <a href="https://goatygoats.com/" target="_blank">Goaty Goats</a><br>-->
       <!--<a href="https://cdn.spax.zone/nahua-ref-sheet.png" target="_blank">High Res Version</a>-->
     </article>
-    <section id="clarifications">
-      <article>
+    <section>
+      <article id="lore">
+        General Lore:<br>
+        Nahua is a fallen demigod who takes the form of an anthropomorphic axolotl. Unable to return from Earth, she's taken up the internet as a hobby to try connect with others and live a comfortable life.<br>
+        With the power to shapeshift (given enough concentration), she's recently taken up a goopy form, which she has a special comfort in for reasons only known to her. She reverts back to a "solid" form when it feels appropriate to do so, however.
+      </article>
+      <article id="clarifications">
         Design notes and clarifications:<br>
         - She has four fingers (as opposed to three or five).<br>
-        - Her hair is very kelp-like in texture, and the light blue parts of it are phosphorescent.<br>
-        - Those 6 things behind her head are her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>)!<br>
+        - Her hair is very kelp-like in texture, and the light blue parts of it can be phosphorescent.<br>
+        - Those 6 things behind her head are her gills (or <a href="https://en.wikipedia.org/wiki/External_gills" target="_blank">rami</a>)! I also call them frills.<br>
         - Note the little yellow things next to her eyes. They're little flairs that come off of them rather than actually being on her skin, since it's a bit ambiguous in the ref.<br>
         - She has minor transformative powers (some may call this shapeshifting).<br>
-        - She wears an elastic tailband at the base of her tail for comfort reasons! Not optional.<br>
+        - She wears an elastic tailband at the base of her tail for comfort reasons! <em>Not optional.</em><br>
         - Her outfit doesn't need to be the one in the ref! She does tend to prefer more open/breathable clothing though. She goes for a tomboy-ish look.<br>
         - Her breasts can be any size up to B-cups (A-cups are usually fine). And tell Spax the word pineapple as proof you read this in its entirety.<br>
         - The headphones are optional rather than encouraged. She has no visible ears.<br>
+        - The tip of her tail is a light blue! People often miss this detail.<br>
         - Some words I would use to describe her personality: outgoing, smug, playful, naïve, flirtatious(?), and goofy.<br>
-        <!--Old design notes from the slightly older ref:
+        <!--Old design notes from the slightly older ref (obviously outdated now):
           - Always wears headphones or ear-coverings (she looks weird without them).
           - Doesn’t wear furs (they stick uncomfortably to the mucus on her skin).
           - Yellow eyelash-things are optional, but iconic.
@@ -96,14 +105,19 @@
           - Hair is made out of kelp or something, idk. Go wild.
           - Has minor transformative powers (lore).
         -->
-        <br>
       </article>
       <article id="goop">
         GOOP INFORMATION:<br>
-        Recently, I have been on this so-called "goop arc". Nahua now has a canon alternative form in which she is goop (a more viscous sort of slime). This is still a very experimental era, so depictions of her as goop won't be scrutinized as much as the "solid" form.<br>
-        Here are the two most relevant pieces of goop art:<br>
-        <a target="_blank" href="https://bsky.app/profile/did:plc:erljg5y74ltqn5pyc7y33n6w/post/3ldpogpqhlc24">First</a> (Drawn by accentaigu)<br>
-        <a target="_blank" href="https://bsky.app/profile/spax.zone/post/3lqyfnrk4cc2r">Most up-to-date</a> (Drawn by 1LikeBananas)<br>
+        <!--Recently, I have been on this so-called "goop arc". Nahua now has a canon alternative form in which she is goop (a more viscous sort of slime). This is still a very experimental era, so depictions of her as goop won't be scrutinized as much as the "solid" form.<br>-->
+        Nahua now has a canon alternative form in which she is goop (a more viscous sort of slime). After almost a year of experimenting with it, I've figured out what things I prefer to be depicted:<br>
+        - Her goop is very drippy, but it does so over a more spread out surface area (think honey).<br>
+        - Unlike typical slime girls who keep an unobstructed form, Nahua's goop form is always shifting and moving.<br>
+        - Parts of her that are more dexterous keep a relatively static form due to concentration on them. The rest of her body has form and physique as more of a suggestion.<br>
+        - Her goop is mostly opaque, more akin to an extremely muddy liquid. The more submerged something is in her, the harder it is to see it from the outside. She appears opaque otherwise.<br>
+        Here are some relevant pieces of goop art:<br>
+        <a target="_blank" href="https://bsky.app/profile/did:plc:erljg5y74ltqn5pyc7y33n6w/post/3ldpogpqhlc24">First ever art of her as goop</a> (Drawn by <a target="_blank" href="https://bsky.app/profile/accentaigu.bsky.social">accentaigu</a>)<br>
+        <a target="_blank" href="https://bsky.app/profile/spax.zone/post/3lqyfnrk4cc2r">Most accurate (in terms of consistency)</a> (Drawn by <a target="_blank" href="https://bsky.app/profile/1likebananas.bsky.social">1LikeBananas</a>)<br>
+        <a target="_blank" href="https://bsky.app/profile/cyberzyd.bsky.social/post/3lwoxutp2jc2c">Things you can do to her</a> (Drawn by <a target="_blank" href="https://bsky.app/profile/cyberzyd.bsky.social">cyberzyd</a>)<br>
         <!--<a target="_blank" href="https://bsky.app/profile/did:plc:6qbvevxtcgu4t6vw6xkpajdq/post/3lftehwindk2c">Second</a><br>
         <a target="_blank" href="https://cdn.spax.zone/Nahua_Kylefur_Goop.png">Third</a> (<a target="_blank" href="https://toyhou.se/KyleFur">Artist</a>)<br>
         <a target="_blank" href="https://cdn.spax.zone/Nahua_Bananas_Slime.png">Fourth</a><br>
@@ -115,9 +129,15 @@
         Note: some of these haven't been posted publicly by the artists, and are direct links on my CDN. I have credited the artist next to the links if they have a social.-->
         NOTE: A goop ref sheet will be made in the coming months!
       </article>
+      <!--
+      <article id="terms">
+        Common terms:<br>
+        - Rami, gills, and frills all refer to the things behind her head<br>
+        -  <br>
+      </article>-->
     </section>
     <article>
-      If you need any other clarifications, feel free to reach out and ask me on discord!<br>
+      If you need any other clarifications, feel free to reach out and ask me on <em id="discord" hover="@spaxolotl">discord</em>!<br>
       <br>
       Oh, and you don't need my permission to draw her, but I do ask you to 1) tag my relevant social if you post it somewhere, and 2) not draw nsfw of her unless explicitly given permission from me.
     </article>
@@ -136,13 +156,25 @@
           <div style="background-color:#e3d2b0;"></div>
           <div style="background-color:#590100;"></div>
         </div>
+        gameboy color palette:<br>
+        (the green second from the right should only be used if pure black is not used)
+        <div>
+          <div style="background-color:#e0f8cf;"></div>
+          <div style="background-color:#86c06c;"></div>
+          <div style="background-color:#306850;"></div>
+          <div style="background-color:#071821; outline:#FFFFFF 3px solid;"></div>
+          <div style="background-color:#000000; outline:#FFFFFF 3px solid;"></div>
+        </div>
       </div>
     </article>
     <article class="short">
-      Last updated: July 2nd, 2025<br>
+      <a href="https://artfight.net/character/6455582.nahua-poxcahuiya" target="_blank">Artfight character link</a> (requires an account to view, unfortunately)
     </article>
     <article class="short">
-      (And <a href="/index.html">click here</a> to see the main page!)
+      Last updated: October 16th, 2025<br>
+    </article>
+    <article class="short">
+      (<a href="/index.html">Take me back to the main page please!</a>)
     </article>
     <script>
       async function writeClipboardText(text) {
@@ -152,6 +184,8 @@
           console.error(error.message);
         }
       }
+      const discordSpan = document.querySelector(`#discord`);
+      discordSpan.addEventListener("click", e => writeClipboardText(discordSpan.getAttribute(`hover`)));
       for (const square of [...document.querySelectorAll(`#colors div[style]`)]) {
         square.addEventListener("click", () => {
           const styles = square.getAttribute("style");
