forgot the bit about her full name

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -105,6 +105,7 @@
           - Hair is made out of kelp or something, idk. Go wild.
           - Has minor transformative powers (lore).
         -->
+        - Recently I have given her a full name: Nahua Poxcahuiya (pronounced NA-wa pohsh-ka-WEE-wa, or NA-hoo-wa).
       </article>
       <article id="goop">
         GOOP INFORMATION:<br>
