--- a/html/index.html
+++ b/html/index.html
@@ -184,8 +184,8 @@
     <a href="https://notnite.com/">
       <img src="https://notnite.com/buttons/notnite.png" alt="notnite.com">
     </a>
-    <a href="https://starundrscre.xyz/">
-      <img src="https://starundrscre.xyz/assets/img/badges/starundrscre.gif" alt="starundrscre.xyz">
+    <a href="https://www.starundrscre.xyz/">
+      <img src="https://www.starundrscre.xyz/assets/img/badges/starundrscre.gif" alt="starundrscre.xyz">
     </a>
     <a href="https://racc.at/">
       <img src="https://racc.at/media/uploads/88x31.png" alt="racc.at">
@@ -195,6 +195,9 @@
     </a>
     <a href="https://maia.crimew.gay/">
       <img src="https://maia.crimew.gay/badges/maia.crimew.gay.png" alt="maia.crimew.gay">
+    </a>
+    <a href="https://lucastheguy.nekoweb.org/">
+      <img src="https://lucastheguy.nekoweb.org/images/button.gif" alt="lucas.nekoweb.org">
     </a>
   </article>
   <article who="nahua" emotion="bashful" id="spaxzone-button">
