--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,12 @@
     #eggbug-eggring table {
       width: 100%;
     }
+    #john {
+      max-width: 728px;
+      width: 100%;
+      aspect-ratio: 728/90;
+      border: none;
+    }
     #spaxjohn {
       max-width: 722px;
       min-height: 84px;
@@ -22,6 +28,13 @@
         left: 3px;
         top:  3px;
         height: 72px;
+      }
+    }
+    #buttons img, #john {
+      filter: url(#gbfilter);
+      transition: filter 0.15s linear;
+      &:hover {
+        filter: none;
       }
     }
     #buttons {
@@ -48,9 +61,35 @@
         height: 31px;
       }
     }
+    #filters {
+      opacity: 0;
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 0;
+      width: 0;
+    }
   </style>
 </head>
 <body>
+  <svg id="filters">
+    <defs>
+      <filter id="gbfilter" color-interpolation-filters="sRGB">
+        <feColorMatrix type="matrix" values=".33 .33 .33 0 0
+          .33 .33 .33 0 0
+          .33 .33 .33 0 0
+          0 0 0 1 0" in="SourceGraphic" result="colormatrix"
+        />
+        <feComponentTransfer in="colormatrix" result="componentTransfer">
+          <feFuncR type="table" tableValues="0 0.19 0.53 0.88"/>
+          <feFuncG type="table" tableValues="0 0.41 0.75 0.97"/>
+          <feFuncB type="table" tableValues="0 0.31 0.42 0.81"/>
+          <feFuncA type="table" tableValues="0 1"/>
+        </feComponentTransfer>
+        <feBlend mode="normal" in="componentTransfer" in2="SourceGraphic" result="blend"/>
+      </filter>
+    </defs>
+  </svg>
   <article id="top">
     <a href="/sitelist.html">Click here</a> to see my full site list!<br>
     -Spax
@@ -61,7 +100,6 @@
   <article who="claire" emotion="happy">
     I am now on a website. Woo!
   </article>
-  
   <article who="claire" emotion="sigh">
     Anyways it's time to refactor pretty much the entire site.
   </article>
@@ -118,112 +156,112 @@
     </a>
     <a href="/nsfw">
         <img src="/buttons/noclick.gif" alt="don't click" title="you will regret this">
-    </a>
-    <a href="https://mykocalico.neocities.org/buttons">
-      <img src="/buttons/cohost.gif" alt="i was on cohost!">
-    </a>
-    <a href="https://www.noti.tg/">
-      <img src="/buttons/notitg.png" alt="noti.tg">
-    </a>
-    <a href="https://oat.zone/">
-      <img src="https://oat.zone/badges/oatzone.gif" alt="oat.zone">
-    </a>
-    <a href="https://yugoslavia.best/">
-      <img src="/buttons/blinchik.gif" alt="yugoslavia.best">
-    </a>
-    <a href="https://mayf.pink/">
-      <img src="https://mayf.pink/data/main/buttons/__mayf.gif" alt="mayf.pink">
-    </a>
-    <a href="https://goat.rest/">
-      <img src="https://goat.rest/88x31-anim.gif" alt="goat.rest">
-    </a>
-    <a href="https://yhvr.me/">
-      <img src="/buttons/yhvrdotme.gif" alt="yhvr.me">
-    </a>
-    <a href="https://galaxy.click/">
-      <img src="/buttons/galaxydotclick.png" alt="galaxy.click">
-    </a>
-    <a href="https://icosahedr.online/">
-      <img src="https://misc.icosahedr.online/trinket/sapbutton.gif" alt="icosahedr.online">
-    </a>
-    <a href="https://alterae.online/">
-      <img src="https://alterae.online/res/88x31.webp" alt="alterae.online">
-    </a>
-    <a href="https://tempest.nekoweb.org/">
-      <img src="/buttons/pixel_snake_button.png" alt="tempest.nekoweb.org">
-    </a>
-    <a href="https://tulipbunny.au/">
-      <img src="https://tulipbunny.au/images/8831/tulipbunny%20button%20(jess).png" alt="tulipbunny.au">
-    </a>
-    <a href="https://quwyou.com/">
-      <img src="https://quwyou.com/media/buttons/button_quwyou.gif" alt="quwyou.com">
-    </a>
-    <a href="https://jecket.xyz/">
-      <img src="https://ryzzica.xyz/assets/badges/jecket.gif" alt="jecket.xyz">
-    </a>
-    <a href="https://easrng.net/">
-      <img src="https://badges.easrng.net/easrng.gif" alt="easrng.net">
-    </a>
-    <a href="https://coolstation.space/">
-      <img src="https://coolstation.space/cool_assets/88x31/coolstation.png" alt="coolstation.space">
-    </a>
-    <a href="https://www.wavebeem.com/">
-      <img src="https://www.wavebeem.com/button.webp" alt="wavebeem.com">
-    </a>
-    <a href="https://tanukicomputing.neocities.org/">
-      <img src="https://tanukicomputing.neocities.org/buttons/Tanuki-Computing2.0.gif" alt="tanukicomputing.neocities.org">
-    </a>
-    <a href="https://twotwos.nekoweb.org/">
-      <img src="/buttons/two.png" alt="twotwos.nekoweb.org">
-    </a>
-    <a href="https://terezi.pyrope.net/">
-      <img src="https://terezi.pyrope.net/88x31.png" alt="terezi.pyrope.net">
-    </a>
-    <a href="https://matytoonistarchive.neocities.org/">
-      <img src="https://matytoonistarchive.neocities.org/images/88by31button.gif" alt="matytoonistarchive.neocities.org">
-    </a>
-    <a href="https://sharkboob.observer/">
-      <img src="https://sharkboob.observer/graphics/buttons/88x31.png" alt="sharkboob.observer">
-    </a>
-    <a href="https://reidlab.pink/">
-      <img src="https://reidlab.pink/88x31.gif" alt="reidlab.pink">
-    </a>
-    <a href="https://styx-os.org/">
-      <img src="https://content.styx-os.org/file/data/73f4itz6w6nnfrfplylx/PHID-FILE-hk3ea2rb7yafrut3hmle/styx-8831-rounded.gif" alt="styx-os.org">
-    </a>
-    <a href="https://lisanne.gay/">
-      <img src="https://lisanne.gay/88x31_pls_DO_hotlink.png" alt="lisanne.gay">
-    </a>
-    <a href="https://sudospective.net/">
-      <img src="https://sudospective.net/assets/badges/sudospective.png" alt="sudospective.net">
-    </a>
-    <a href="https://meow-d.github.io/">
-      <img src="https://meow-d.github.io/assets/images/buttons/meow_d.webp" alt="meow-d.github.io">
-    </a>
-    <a href="https://onz.ee/">
-      <img src="https://onz.ee/assets/88x31s/avif/onzecki.avif" alt="onz.ee">
-    </a>
-    <a href="https://temstuff.neocities.org/">
-      <img src="https://64.media.tumblr.com/5249466109a089aa220762aa2075205c/a51f6f9947d2d663-78/s100x200/16dfd414c2d035315f340988656362bebc79d515.gif" alt="temstuff.neocities.org">
-    </a>
-    <a href="https://notnite.com/">
-      <img src="https://notnite.com/buttons/notnite.png" alt="notnite.com">
-    </a>
-    <a href="https://www.starundrscre.xyz/">
-      <img src="https://www.starundrscre.xyz/assets/img/badges/starundrscre.gif" alt="starundrscre.xyz">
-    </a>
-    <a href="https://racc.at/">
-      <img src="https://racc.at/media/uploads/88x31.png" alt="racc.at">
-    </a>
-    <a href="https://canine.tools/">
-      <img src="https://canine.tools/assets/images/badges/badge.png" alt="canine.tools">
-    </a>
-    <a href="https://maia.crimew.gay/">
-      <img src="https://maia.crimew.gay/badges/maia.crimew.gay.png" alt="maia.crimew.gay">
-    </a>
-    <a href="https://lucastheguy.nekoweb.org/">
-      <img src="https://lucastheguy.nekoweb.org/images/button.gif" alt="lucas.nekoweb.org">
-    </a>
+      </a>
+      <a href="https://mykocalico.neocities.org/buttons">
+        <img src="/buttons/cohost.gif" alt="i was on cohost!">
+      </a>
+      <a href="https://www.noti.tg/">
+        <img src="/buttons/notitg.png" alt="noti.tg">
+      </a>
+      <a href="https://oat.zone/">
+        <img src="https://oat.zone/badges/oatzone.gif" alt="oat.zone">
+      </a>
+      <a href="https://yugoslavia.best/">
+        <img src="/buttons/blinchik.gif" alt="yugoslavia.best">
+      </a>
+      <a href="https://mayf.pink/">
+        <img src="https://mayf.pink/data/main/buttons/__mayf.gif" alt="mayf.pink">
+      </a>
+      <a href="https://goat.rest/">
+        <img src="https://goat.rest/88x31-anim.gif" alt="goat.rest">
+      </a>
+      <a href="https://yhvr.me/">
+        <img src="/buttons/yhvrdotme.gif" alt="yhvr.me">
+      </a>
+      <a href="https://galaxy.click/">
+        <img src="/buttons/galaxydotclick.png" alt="galaxy.click">
+      </a>
+      <a href="https://icosahedr.online/">
+        <img src="https://misc.icosahedr.online/trinket/sapbutton.gif" alt="icosahedr.online">
+      </a>
+      <a href="https://alterae.online/">
+        <img src="https://alterae.online/res/88x31.webp" alt="alterae.online">
+      </a>
+      <a href="https://tempest.nekoweb.org/">
+        <img src="/buttons/pixel_snake_button.png" alt="tempest.nekoweb.org">
+      </a>
+      <a href="https://tulipbunny.au/">
+        <img src="https://tulipbunny.au/images/8831/tulipbunny%20button%20(jess).png" alt="tulipbunny.au">
+      </a>
+      <a href="https://quwyou.com/">
+        <img src="https://quwyou.com/media/buttons/button_quwyou.gif" alt="quwyou.com">
+      </a>
+      <a href="https://jecket.xyz/">
+        <img src="https://ryzzica.xyz/assets/badges/jecket.gif" alt="jecket.xyz">
+      </a>
+      <a href="https://easrng.net/">
+        <img src="https://badges.easrng.net/easrng.gif" alt="easrng.net">
+      </a>
+      <a href="https://coolstation.space/">
+        <img src="https://coolstation.space/cool_assets/88x31/coolstation.png" alt="coolstation.space">
+      </a>
+      <a href="https://www.wavebeem.com/">
+        <img src="https://www.wavebeem.com/button.webp" alt="wavebeem.com">
+      </a>
+      <a href="https://tanukicomputing.neocities.org/">
+        <img src="https://tanukicomputing.neocities.org/buttons/Tanuki-Computing2.0.gif" alt="tanukicomputing.neocities.org">
+      </a>
+      <a href="https://twotwos.nekoweb.org/">
+        <img src="/buttons/two.png" alt="twotwos.nekoweb.org">
+      </a>
+      <a href="https://terezi.pyrope.net/">
+        <img src="https://terezi.pyrope.net/88x31.png" alt="terezi.pyrope.net">
+      </a>
+      <a href="https://matytoonistarchive.neocities.org/">
+        <img src="https://matytoonistarchive.neocities.org/images/88by31button.gif" alt="matytoonistarchive.neocities.org">
+      </a>
+      <a href="https://sharkboob.observer/">
+        <img src="https://sharkboob.observer/graphics/buttons/88x31.png" alt="sharkboob.observer">
+      </a>
+      <a href="https://reidlab.pink/">
+        <img src="https://reidlab.pink/88x31.gif" alt="reidlab.pink">
+      </a>
+      <a href="https://styx-os.org/">
+        <img src="https://content.styx-os.org/file/data/73f4itz6w6nnfrfplylx/PHID-FILE-hk3ea2rb7yafrut3hmle/styx-8831-rounded.gif" alt="styx-os.org">
+      </a>
+      <a href="https://lisanne.gay/">
+        <img src="https://lisanne.gay/88x31_pls_DO_hotlink.png" alt="lisanne.gay">
+      </a>
+      <a href="https://sudospective.net/">
+        <img src="https://sudospective.net/assets/badges/sudospective.png" alt="sudospective.net">
+      </a>
+      <a href="https://meow-d.github.io/">
+        <img src="https://meow-d.github.io/assets/images/buttons/meow_d.webp" alt="meow-d.github.io">
+      </a>
+      <a href="https://onz.ee/">
+        <img src="https://onz.ee/assets/88x31s/avif/onzecki.avif" alt="onz.ee">
+      </a>
+      <a href="https://temstuff.neocities.org/">
+        <img src="https://64.media.tumblr.com/5249466109a089aa220762aa2075205c/a51f6f9947d2d663-78/s100x200/16dfd414c2d035315f340988656362bebc79d515.gif" alt="temstuff.neocities.org">
+      </a>
+      <a href="https://notnite.com/">
+        <img src="https://notnite.com/buttons/notnite.png" alt="notnite.com">
+      </a>
+      <a href="https://www.starundrscre.xyz/">
+        <img src="https://www.starundrscre.xyz/assets/img/badges/starundrscre.gif" alt="starundrscre.xyz">
+      </a>
+      <a href="https://racc.at/">
+        <img src="https://racc.at/media/uploads/88x31.png" alt="racc.at">
+      </a>
+      <a href="https://canine.tools/">
+        <img src="https://canine.tools/assets/images/badges/badge.png" alt="canine.tools">
+      </a>
+      <a href="https://maia.crimew.gay/">
+        <img src="https://maia.crimew.gay/badges/maia.crimew.gay.png" alt="maia.crimew.gay">
+      </a>
+      <a href="https://lucastheguy.nekoweb.org/">
+        <img src="https://lucastheguy.nekoweb.org/images/button.gif" alt="lucas.nekoweb.org">
+      </a>
     </div>
     <div class="miscbuttons">
       <a href="https://sexfm.live/">
@@ -245,7 +283,7 @@
   <article who="nahua" emotion="neutral">
     And here's a word from a johnvertisement:
   </article>
-  <iframe src="https://john.citrons.xyz/embed?ref=spax.zone" style="max-width:728px;width:100%;aspect-ratio:728/90;border:none;"></iframe>
+  <iframe id="john" src="https://john.citrons.xyz/embed?ref=spax.zone"></iframe>
   <!--gonna put my johnvertisement here:
   <article who="nahua" emotion="smug" id="spaxjohn">
     <span class="r1">&lt;<span style="display:inline-block;transform:translateY(1.25px) scaleX(200%);margin-left:-3px;margin-right:10px;">-</span>THIS MOTHERSLUDGER</span> was turned into <span class="g3" style="display: inline-block; font-size: 30px; transform: translateY(20%); text-shadow: rgb(var(--g3v), 1) 0 1px 1px, rgb(var(--g3v), 0.75) 0 3px 2px, rgb(var(--g3v), 0.5) 0 7.5px 3px;">GOOP</span> <span style="font-size: 16px;">(find out how at <a href="https://spax.zone/">spax.zone</a>)</span>
@@ -316,12 +354,12 @@
   <article who="nahua" emotion="pensive">
     Eggbug forever.
   </article>
-  <article who="nahua" emotion="joyful" id="sillypost">
+  <!--<article who="nahua" emotion="joyful" id="sillypost">
     The newest (and arguably silliest) one I have now is a sillypost profile!
   </article>
   <article who="nahua" emotion="look">
     My account is <a href="https://sillypost.net/user/spax">@spax</a>, which you'll only be able to view if you have an account.
-  </article>
+  </article>-->
   <article who="nahua" emotion="happy" id="email">
     I also have an email! imstuff at spax dot zone.
   </article>
