--- a/html/index.html
+++ b/html/index.html
@@ -30,13 +30,13 @@
         height: 72px;
       }
     }
-    #buttons img, #john {
-      filter: url(#gbfilter);
+    /*#buttons img, #john {
+      filter: url(/images/filters.svg#gb);
       transition: filter 0.15s linear;
       &:hover {
         filter: none;
       }
-    }
+    }*/
     #buttons {
       display: flex;
       flex-direction: column;
@@ -72,24 +72,6 @@
   </style>
 </head>
 <body>
-  <svg id="filters">
-    <defs>
-      <filter id="gbfilter" color-interpolation-filters="sRGB">
-        <feColorMatrix type="matrix" values=".33 .33 .33 0 0
-          .33 .33 .33 0 0
-          .33 .33 .33 0 0
-          0 0 0 1 0" in="SourceGraphic" result="colormatrix"
-        />
-        <feComponentTransfer in="colormatrix" result="componentTransfer">
-          <feFuncR type="table" tableValues="0 0.19 0.53 0.88"/>
-          <feFuncG type="table" tableValues="0 0.41 0.75 0.97"/>
-          <feFuncB type="table" tableValues="0 0.31 0.42 0.81"/>
-          <feFuncA type="table" tableValues="0 1"/>
-        </feComponentTransfer>
-        <feBlend mode="normal" in="componentTransfer" in2="SourceGraphic" result="blend"/>
-      </filter>
-    </defs>
-  </svg>
   <article id="top">
     <a href="/sitelist.html">Click here</a> to see my full site list!<br>
     -Spax
