--- a/html/index.html
+++ b/html/index.html
@@ -73,36 +73,93 @@
 </head>
 <body>
   <article id="top">
-    <a href="/sitelist.html">Click here</a> to see my full site list!<br>
+    Here's the <a href="/sitelist.html">list of pages</a> you can access!<br>
+    And here's the place you can jump to if you <a href="#socials">need to contact me</a>.<br>
     -Spax
   </article>
   <article who="claire" emotion="neutral">
-    Hey nerds. It's me, Claire !
+    Heyyy nerds.
   </article>
   <article who="claire" emotion="happy">
-    I am now on a website. Woo!
+    It's Claire from hit game <a href="https://tuyoki.itch.io/dwellers-empty-path" target="_blank">Dweller's Empty Path</a> made by talented artist <a href="https://temstuff.neocities.org/" target="_blank">Temmie Chang</a>!
   </article>
-  <article who="claire" emotion="sigh">
-    Anyways it's time to refactor pretty much the entire site.
+  <article who="claire" emotion="neutral">
+    I'm here to tell you about this silly site Spax made.
   </article>
   <article who="claire" emotion="look">
-    Spax hasn't worked on it in over two years.
+    Fun fact!<br>
+    Spax hasn't worked on it in over three years.
+  </article>
+  <article who="nahua" emotion="angry">
+    NOT true!
   </article>
   <article who="nahua" emotion="look">
-    True...
+    I've been slowly hacking away at my site...
   </article>
-  <article who="nahua" emotion="happy">
-    But keep an eye out for some new changes!
+  <article who="claire" emotion="sigh">
+    Yeah right.<br>
+    Look at those gaps in your Github activity.<br>
+  </article>
+  <article who="claire" emotion="neutral">
+    <img style="width: 100%;" class="bilinear" src="https://cdn.spax.zone/github_activity_oct2025.png">
+  </article>
+  <article who="nahua" emotion="angry">
+    HEY! Who even gave you permission to embed images??
+  </article>
+  <article who="claire" emotion="neutral">
+    You didn't sanitize your HTML.
+  </article>
+  <article who="claire" emotion="sigh">
+    And let me guess.. you're gonna *blog* about your Github activity.
+  </article>
+  <article who="nahua" emotion="angry">
+    I first need to dedicate a section of my site TO blogging-
+  </article>
+  <article who="claire" emotion="neutral">
+    I fear this goop is just too predictable.
+  </article>
+  <article who="nahua" emotion="angry">
+    ...
+  </article>
+  <article who="nahua" emotion="angry">
+    I'm <em>color:var(--b1);</em>ing your text.
+  </article>
+  <article who="claire" emotion="aghast">
+    <span style="color:var(--b1);">WAIT NO YOU CAN'T DO THIS TO ME!!</span>
+  </article>
+  <article who="claire" emotion="sigh">
+    <span style="color:var(--b1);">Fine I'll leave your stupid index page.</span>
+  </article>
+  <article who="nahua" emotion="look">
+    Now that she's taken care of...
   </article>
   <article who="nahua" emotion="neutral">
-    Speaking of...
+    I can finally talk about my website!
   </article>
-  <article who="nahua" emotion="joyful" id="webrings">
-    I've joined some webrings!
+  <article who="nahua" emotion="disappointed">
+    Unfortunately I've had less time to sit down and just work on it because life is BUSY.
+  </article>
+  <article who="nahua" emotion="expressionless">
+    I still really do need to refactor it, but I think I've developed enough skills and knowledge to do it in a way that's best for me.
+  </article>
+  <article who="nahua" emotion="neutral">
+    I still love working on what's become my longest running project, though.
+  </article>
+  <article who="nahua" emotion="bashful">
+    And I'm grateful for the people who help me on the site, whether that be moral support, providing resources, etc.
+  </article>
+  <article who="nahua" emotion="sigh">
+    <span style="opacity:0.3;">*sigh*</span>
+  </article>
+  <article who="nahua" emotion="neutral">
+    Well enough about that. Enjoy the rest of my current index page.
+  </article>
+  <article who="nahua" emotion="joyful">
+    Here's some webrings I'm a part of!
   </article>
   <article id="mcai-webring" class="webring centertext short">
     part of the <span hover="man, computers are incredible">m,cai</span> webring<br><br>
-    <a href="https://coolstation.space/" class="nowrap">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://marbelynrye.000.pe/" class="nowrap">-&gt;</a>
+    <a href="https://coolstation.space/" class="nowrap">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://terezi.pyrope.net/" class="nowrap">-&gt;</a>
   </article>
   <article id="muoring" class="webring centertext short">
     straight up in the muoring<br><br>
@@ -138,6 +195,9 @@
       </a>
       <a href="/nsfw">
         <img src="/buttons/noclick.gif" alt="don't click" title="you will regret this">
+      </a>
+      <a href="https://sexfm.live/">
+        <img src="https://git.gay/9hax/88x31/raw/branch/main/i_love_sexfm/i_love_sexfm.gif" alt="sexfm.live">
       </a>
       <a href="https://mykocalico.neocities.org/buttons">
         <img src="/buttons/cohost.gif" alt="i was on cohost!">
@@ -246,15 +306,17 @@
       </a>
     </div>
     <div class="miscbuttons">
-      <a href="https://sexfm.live/">
+      <!--<a href="https://sexfm.live/">
         <img style="width:150px; height:20px;" src="https://sexfm.live/ilovesexfm.gif" alt="sexfm.live">
-      </a>
+      </a>-->
     </div>
   </article>
   <article who="nahua" emotion="bashful" id="spaxzone-button">
     And don't forget to add my own button to your site!<br>
-    <a href="https://spax.zone/"><img src="https://spax.zone/buttons/spaxdotzone.gif"></a>
-    <textarea readonly style="height:60px;">&lt;a href="https://spax.zone/"&gt;&lt;img src="https://spax.zone/buttons/spaxdotzone.gif"&gt;&lt;/a&gt;</textarea>
+    <a href="https://spax.zone/">
+      <img src="https://spax.zone/buttons/spaxdotzone.gif" alt="spax.zone">
+    </a>
+    <textarea readonly style="height:60px;"></textarea>
   </article>
   <article who="nahua" emotion="neutral">
     (Hotlinking mine is okay)
@@ -263,8 +325,9 @@
     (Also don't ask how I pronounced an image and HTML)
   </article>
   <article who="nahua" emotion="neutral">
-    And here's a word from a johnvertisement:
+    And here's a word from a johnvertisement!
   </article>
+  <article who="nahua" emotion="lookdown"></article>
   <iframe id="john" src="https://john.citrons.xyz/embed?ref=spax.zone"></iframe>
   <!--gonna put my johnvertisement here:
   <article who="nahua" emotion="smug" id="spaxjohn">
@@ -272,22 +335,8 @@
     <img src="https://cdn.spax.zone/nahua_accentaigu_slime.png" style="display: none; position: absolute; height: 90%; top: 5%; right: 1%; aspect-ratio: 2400 / 2600; image-rendering: smooth;">
   </article>
   -->
-  <article who="nahua" emotion="happy">
-    Now with all of that fun HTML stuff out of the way, let's talk about this website!
-  </article>
-  <article who="nahua" emotion="expressionless">
-    This index page will become less linear as soon as I decide to
-    start working on it, but for now this is what it'll be.
-  </article>
-  <article who="nahua" emotion="disappointed">
-    I've got so many things I wanna do lately; my site, gamedev, drawing,
-    playing new games, 3d modeling, restructuring my discord server, et cetera.
-  </article>
-  <article who="nahua" emotion="expressionless">
-    Motivation is hard, and committing to the things is also hard, but I'll get there in the end.
-  </article>
   <article who="nahua" emotion="neutral" id="socials">
-    Regardless, I should probably link some of my socials on here.
+    Now with all of that fun HTML stuff out of the way, here's some of my socials and ways to contact me.
   </article>
   <article who="nahua" emotion="happy" id="bluesky">
     My Bluesky is (unsurprisingly) <a href="https://bsky.app/profile/spax.zone" target="_blank">@spax.zone</a>.
@@ -301,13 +350,13 @@
   <article who="nahua" emotion="bashful">
     (I follow back if I know you!)
   </article>
-  <article who="nahua" emotion="look">
+  <article who="nahua" emotion="smug">
     (Or if I think you're cool)
   </article>
   <article who="nahua" emotion="happy" id="mastodon">
     My Mastodon/Fediverse is <a href="https://furry.engineer/@spax" target="_blank">@spax@furry.engineer</a>.
   </article>
-  <article who="nahua" emotion="neutral">
+  <article who="nahua" emotion="smug">
     The domain is really funny, which is why I'm sticking with it.
   </article>
   <article who="nahua" emotion="look">
@@ -323,18 +372,25 @@
     But you should generally be able to add me.
   </article>
   <article who="nahua" emotion="happy" id="signal">
-    I also have a Signal! My username there is <span class="underline">spax.01</span>, and my chats expire after a week by default.
+    I also have a Signal! My username there is <em>spax.01</em>, and my chats expire after a week by default.
+  </article>
+  <article who="nahua" emotion="neutral">
+    And finally, I also do have a Telegram, <a href="https://t.me/spaxolotl" target="_blank">@Spaxolotl</a>.
+  </article>
+  <article who="nahua" emotion="look">
+    I check it relatively often nowadays, since I have a friend group who uses it, but I do prefer Discord.
   </article>
   <article who="nahua" emotion="expressionless" id="cohost">
-    I uh, used to have a <a href="https://cohost.org" target="_blank">Cohost</a>, but the site is
-    shutting down at the end of the year and is currently in a read-only mode,
-    so no real use linking that.
+    It's also worth noting, I used to have a <a href="https://cohost.org" target="_blank">Cohost</a>, but the site shut down in late 2024.
   </article>
   <!--<article who="nahua" emotion="nervous">
     (I also have a very unflattering story relating to it).
   </article>-->
   <article who="nahua" emotion="pensive">
     Eggbug forever.
+  </article>
+  <article who="nahua" emotion="look">
+    (OH! If you have an eggbug plush that you're willing to sell, I might be willing to buy it!!)
   </article>
   <!--<article who="nahua" emotion="joyful" id="sillypost">
     The newest (and arguably silliest) one I have now is a sillypost profile!
@@ -343,10 +399,13 @@
     My account is <a href="https://sillypost.net/user/spax">@spax</a>, which you'll only be able to view if you have an account.
   </article>-->
   <article who="nahua" emotion="happy" id="email">
-    I also have an email! imstuff at spax dot zone.
+    You can also email me for more official matters! <em>imstuff at spax dot zone</em>.
+  </article>
+  <article who="nahua" emotion="look">
+    (Surprisingly, I do read my emails daily, so this is still a reliable method of contacting me).
   </article>
   <article who="nahua" emotion="disappointed">
-    (I would directly link it but web crawlers kinda suck ass).
+    (I would also directly link it but web crawlers kinda suck ass).
   </article>
   <article who="nahua" emotion="look">
     Right now it's actually cloudflare just forwarding the emails to a gmail account instead...
@@ -355,11 +414,11 @@
     But I'll set up the actual documents at some point so it can really be its own email.
   </article>
   <article who="nahua" emotion="happy">
-    Anyways, I believe those are all the socials I'm active on and places you can contact me.
+    Anyways, I believe that's everywhere notable. Some other less important things are linked on my Discord profile, if you wanna verify something is me.
   </article>
   <article who="nahua" emotion="neutral">
-    If you missed the banner at the top of the page, <a href="./sitelist.html">here's a link to my full sitelist</a>
-    if you wanna see more stuff I've made/written.
+    If you missed the banner at the top of the page, <a href="./sitelist.html">here's a link to my full page list</a>
+    if you wanna see more stuff I've made and written.
   </article>
   <article who="nahua" emotion="bashful">
     Thank you for visiting my site! It means a lot that you've read the whole thing.<br>
@@ -368,7 +427,7 @@
   <article class="short">
     (This page was last updated on October 20th, 2025)<br><br>
     ((This section will be updated automatically at some point))<br><br>
-    (((Also don't click <a href="/nsfw" target="_blank">here</a>)))
+    (((Also <a href="/nsfw" target="_blank">don't click here</a>)))
   </article>
 </body>
 </html>
