the humble comma:

--- a/html/index.html
+++ b/html/index.html
@@ -81,7 +81,7 @@
     Heyyy nerds.
   </article>
   <article who="claire" emotion="happy">
-    It's Claire from hit game <a href="https://tuyoki.itch.io/dwellers-empty-path" target="_blank">Dweller's Empty Path</a> made by talented artist <a href="https://temstuff.neocities.org/" target="_blank">Temmie Chang</a>!
+    It's Claire from hit game <a href="https://tuyoki.itch.io/dwellers-empty-path" target="_blank">Dweller's Empty Path</a>, made by talented artist <a href="https://temstuff.neocities.org/" target="_blank">Temmie Chang</a>!
   </article>
   <article who="claire" emotion="neutral">
     I'm here to tell you about this silly site Spax made.
