--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,9 @@
   <!--to show mastodon that i own this website:-->
   <link rel="me" href="https://furry.engineer/@spax">
   <style>
+    .punishment {
+      color: var(--b1);
+    }
     #eggbug-eggring table {
       width: 100%;
     }
@@ -124,11 +127,11 @@
   <article who="nahua" emotion="angry">
     I'm <em>color:var(--b1);</em>ing your text.
   </article>
-  <article who="claire" emotion="aghast">
-    <span style="color:var(--b1);">WAIT NO YOU CAN'T DO THIS TO ME!!</span>
+  <article who="claire" emotion="aghast" class="punishment">
+    WAIT NO YOU CAN'T DO THIS TO ME!!
   </article>
-  <article who="claire" emotion="sigh">
-    <span style="color:var(--b1);">Fine I'll leave your stupid index page.</span>
+  <article who="claire" emotion="sigh" class="punishment">
+    Fine I'll leave your stupid index page.
   </article>
   <article who="nahua" emotion="look">
     Now that she's taken care of...
