update all instances of "site list"

--- a/html/index.html
+++ b/html/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
   <article id="top">
-    Here's the <a href="/sitelist.html">list of pages</a> you can access!<br>
+    Here's the <a href="/pagelist.html">list of pages</a> you can access!<br>
     And here's the place you can jump to if you <a href="#socials">need to contact me</a>.<br>
     -Spax
   </article>
@@ -420,7 +420,7 @@
     Anyways, I believe that's everywhere notable. Some other less important things are linked on my Discord profile, if you wanna verify something is me.
   </article>
   <article who="nahua" emotion="neutral">
-    If you missed the banner at the top of the page, <a href="./sitelist.html">here's a link to my full page list</a>
+    If you missed the banner at the top of the page, <a href="./pagelist.html">here's a link to my full page list</a>
     if you wanna see more stuff I've made and written.
   </article>
   <article who="nahua" emotion="bashful">
