--- a/html/pagelist.html
+++ b/html/pagelist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Spax's Site List</title>
+    <title>Spax's Page List</title>
     <meta name="description" content="A place that links every public page currently on my website!">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
@@ -30,10 +30,10 @@
       <a href="/gender.html">My Gender</a><br>
       A blogpost about my recent gender crisis! Skip to the bottom if you don't want to read a lot of text.
     </article>
-    <article>
+    <!--<article>
       <a href="/ratspin/index.html">Rat Spin</a><br>
       Watch the rat spin to the freebird solo!!
-    </article>
+    </article>-->
     <article>
       <a href="/webfishing-drunk/index.html">WEBFISHING Drunk Text Generator</a><br>
       Webfishing's drunk text generation for when you're not playing webfishing!
@@ -89,14 +89,14 @@
     </article>
     <article>
       <a href="/ooo.html">.ooo explorer</a><br>
-      Explore all sites that have "o" as the only character in the url! Sorry if this one doesn't stay up-to-date.
+      Explore all sites that have "o" as the only character in the url! Will be rewritten to stay up-to-date soon!
     </article>
     <article>
       <a href="/animal-gender-bodypart/index.html">Animal Gender Bodypart</a><br>
       A fun username generator based on <a href="https://cohost.org/bethposting/post/6065965-cohost-users-who-cam">this</a> chost.
     </article>
     <article>
-      <a href="/sitelist.html">Site List</a><br>
+      <a href="/pagelist.html">Page List</a><br>
       This page right here!
     </article>
   </body>
