more small index tweaks and add internet phonebook

--- a/html/index.html
+++ b/html/index.html
@@ -114,7 +114,8 @@
     <img style="width: 100%;" class="bilinear" src="https://cdn.spax.zone/github_activity_oct2025.png">
   </article>
   <article who="nahua" emotion="angry">
-    HEY! Who even gave you permission to embed images??
+    HEY!<br>
+    Who even gave you permission to embed iframes??
   </article>
   <article who="claire" emotion="neutral">
     You didn't sanitize your HTML.
@@ -180,7 +181,7 @@
     (this should be replaced with the actual webring by <a href="/scripts/js-controlled-webrings.js">this</a>)
   </article>-->
   <article id="eggbug-eggring" class="webring centertext short">
-    part of the cohost webring<br><br>
+    part of the eggbug eggring<br><br>
     (this should be replaced with the actual webring by <a href="/scripts/js-controlled-webrings.js">this</a>)
   </article>
   <article who="nahua" emotion="neutral">
@@ -319,6 +320,7 @@
       <!--<a href="https://sexfm.live/">
         <img style="width:150px; height:20px;" src="https://sexfm.live/ilovesexfm.gif" alt="sexfm.live">
       </a>-->
+      <iframe src="https://internetphonebook.net/badges/dial-a-site-badge.html?number=153&size=small" width="228" height="54" frameborder="0" style="border: 1px solid #000;"></iframe>
     </div>
   </article>
   <article who="nahua" emotion="bashful" id="spaxzone-button">
@@ -406,7 +408,7 @@
     The newest (and arguably silliest) one I have now is a sillypost profile!
   </article>
   <article who="nahua" emotion="look">
-    My account is <a href="https://sillypost.net/user/spax">@spax</a>, which you'll only be able to view if you have an account.
+    My account is <a href="https://sillypost.net/user/spax" target="_blank">@spax</a>, which you'll only be able to view if you have an account.
   </article>-->
   <article who="nahua" emotion="happy" id="email">
     You can also email me for more official matters! <em>imstuff at spax dot zone</em>.
