--- a/html/index.html
+++ b/html/index.html
@@ -325,9 +325,7 @@
   </article>
   <article who="nahua" emotion="bashful" id="spaxzone-button">
     And don't forget to add my own button to your site!<br>
-    <a href="https://spax.zone/">
-      <img src="https://spax.zone/buttons/spaxdotzone.gif" alt="spax.zone">
-    </a>
+    <a href="https://spax.zone/"><img src="https://spax.zone/buttons/spaxdotzone.gif" alt="spax.zone"></a>
     <textarea readonly style="height:60px;"></textarea>
   </article>
   <article who="nahua" emotion="neutral">
