stop claire from misgendering me

--- a/html/404.html
+++ b/html/404.html
@@ -18,7 +18,7 @@
       (Just kidding no I'm not).
     </article>
     <article who="claire" emotion="sigh">
-      Anyways, Spax told me to direct you to his <a href="/index.html">main page</a>.
+      Anyways, Spax told me to direct you to their <a href="/index.html">main page</a>.
     </article>
     <article who="claire" emotion="neutral">
       See you around?
