tweaks to scss and add pghrt button

--- a/html/index.html
+++ b/html/index.html
@@ -115,7 +115,7 @@
   </article>
   <article who="nahua" emotion="angry">
     HEY!<br>
-    Who even gave you permission to embed iframes??
+    Who even gave you permission to embed images?? <!--change this to iframes when ghact is done-->
   </article>
   <article who="claire" emotion="neutral">
     You didn't sanitize your HTML.
@@ -140,6 +140,9 @@
   </article>
   <article who="claire" emotion="sigh" class="punishment">
     Fine I'll leave your stupid index page.
+  </article>
+  <article>
+    (It seems Claire left the room...)
   </article>
   <article who="nahua" emotion="look">
     Now that she's taken care of...
@@ -189,135 +192,136 @@
   </article>
   <article id="buttons">
     <div class="88x31">
-      <a href="https://cyber.dabamos.de/88x31/">
+      <a href="https://eightyeightthirty.one/#spax.zone" target="_blank">
         <img src="/buttons/88x31.gif" alt="88x31 buttons">
       </a>
-      <a href="https://web.archive.org/web/20141027160015/http://avdol.co.vu/post/91095908541">
+      <a href="https://web.archive.org/web/20141027160015/http://avdol.co.vu/post/91095908541" target="_blank">
         <img src="/buttons/graphicdesign.gif" alt="graphic design is my passion">
       </a>
-      <a href="https://crouton.net/">
+      <a href="https://crouton.net/" target="_blank">
         <img src="/buttons/crouton.png" alt="crouton.net">
       </a>
-      <a href="https://bigrat.monster/">
+      <a href="https://bigrat.monster/" target="_blank">
         <img src="/buttons/bigratdotmonster.png" alt="bigrat.monster">
       </a>
-      <a href="./nahua-ref-sheet.html">
-        <img src="/buttons/paws.png" alt="made with my own two paws">
-      </a>
-      <a href="/nsfw">
+      <img src="/buttons/paws.png" alt="made with my own two paws">
+      <a href="/nsfw" target="_blank">
         <img src="/buttons/noclick.gif" alt="don't click" title="you will regret this">
       </a>
-      <a href="https://sexfm.live/">
+      <a href="https://sexfm.live/" target="_blank">
         <img src="https://git.gay/9hax/88x31/raw/branch/main/i_love_sexfm/i_love_sexfm.gif" alt="sexfm.live">
       </a>
-      <a href="https://mykocalico.neocities.org/buttons">
+      <a href="https://mykocalico.neocities.org/buttons" target="_blank">
         <img src="/buttons/cohost.gif" alt="i was on cohost!">
       </a>
-      <a href="https://www.noti.tg/">
+      <a href="https://www.noti.tg/" target="_blank">
         <img src="/buttons/notitg.png" alt="noti.tg">
       </a>
-      <a href="https://oat.zone/">
+      <a href="https://oat.zone/" target="_blank">
         <img src="https://oat.zone/badges/oatzone.gif" alt="oat.zone">
       </a>
-      <a href="https://yugoslavia.best/">
+      <a href="https://yugoslavia.best/" target="_blank">
         <img src="/buttons/blinchik.gif" alt="yugoslavia.best">
       </a>
-      <a href="https://mayf.pink/">
+      <a href="https://mayf.pink/" target="_blank">
         <img src="https://mayf.pink/data/main/buttons/__mayf.gif" alt="mayf.pink">
       </a>
-      <a href="https://goat.rest/">
+      <a href="https://goat.rest/" target="_blank">
         <img src="https://goat.rest/88x31-anim.gif" alt="goat.rest">
       </a>
-      <a href="https://yhvr.me/">
+      <a href="https://yhvr.me/" target="_blank">
         <img src="/buttons/yhvrdotme.gif" alt="yhvr.me">
       </a>
-      <a href="https://galaxy.click/">
+      <a href="https://galaxy.click/" target="_blank">
         <img src="/buttons/galaxydotclick.png" alt="galaxy.click">
       </a>
-      <a href="https://icosahedr.online/">
+      <a href="https://icosahedr.online/" target="_blank">
         <img src="https://misc.icosahedr.online/trinket/sapbutton.gif" alt="icosahedr.online">
       </a>
-      <a href="https://alterae.online/">
+      <a href="https://alterae.online/" target="_blank">
         <img src="https://alterae.online/res/88x31.webp" alt="alterae.online">
       </a>
-      <a href="https://tempest.nekoweb.org/">
+      <a href="https://tempest.nekoweb.org/" target="_blank">
         <img src="/buttons/pixel_snake_button.png" alt="tempest.nekoweb.org">
       </a>
-      <a href="https://tulipbunny.au/">
+      <a href="https://tulipbunny.au/" target="_blank">
         <img src="https://tulipbunny.au/images/8831/tulipbunny%20button%20(jess).png" alt="tulipbunny.au">
       </a>
-      <a href="https://quwyou.com/">
+      <a href="https://quwyou.com/" target="_blank">
         <img src="https://quwyou.com/media/buttons/button_quwyou.gif" alt="quwyou.com">
       </a>
-      <a href="https://jecket.xyz/">
+      <a href="https://jecket.xyz/" target="_blank">
         <img src="https://ryzzica.xyz/assets/badges/jecket.gif" alt="jecket.xyz">
       </a>
-      <a href="https://easrng.net/">
+      <a href="https://easrng.net/" target="_blank">
         <img src="https://badges.easrng.net/easrng.gif" alt="easrng.net">
       </a>
-      <a href="https://coolstation.space/">
+      <a href="https://coolstation.space/" target="_blank">
         <img src="https://coolstation.space/cool_assets/88x31/coolstation.png" alt="coolstation.space">
       </a>
-      <a href="https://www.wavebeem.com/">
+      <a href="https://www.wavebeem.com/" target="_blank">
         <img src="https://www.wavebeem.com/button.webp" alt="wavebeem.com">
       </a>
-      <a href="https://tanukicomputing.neocities.org/">
+      <a href="https://tanukicomputing.neocities.org/" target="_blank">
         <img src="https://tanukicomputing.neocities.org/buttons/Tanuki-Computing2.0.gif" alt="tanukicomputing.neocities.org">
       </a>
-      <a href="https://twotwos.nekoweb.org/">
+      <a href="https://twotwos.nekoweb.org/" target="_blank">
         <img src="/buttons/two.png" alt="twotwos.nekoweb.org">
       </a>
-      <a href="https://terezi.pyrope.net/">
+      <a href="https://terezi.pyrope.net/" target="_blank">
         <img src="https://terezi.pyrope.net/88x31.png" alt="terezi.pyrope.net">
       </a>
-      <a href="https://matytoonistarchive.neocities.org/">
+      <a href="https://matytoonistarchive.neocities.org/" target="_blank">
         <img src="https://matytoonistarchive.neocities.org/images/88by31button.gif" alt="matytoonistarchive.neocities.org">
       </a>
-      <a href="https://sharkboob.observer/">
+      <a href="https://sharkboob.observer/" target="_blank">
         <img src="https://sharkboob.observer/graphics/buttons/88x31.png" alt="sharkboob.observer">
       </a>
-      <a href="https://reidlab.pink/">
+      <a href="https://reidlab.pink/" target="_blank">
         <img src="https://reidlab.pink/88x31.gif" alt="reidlab.pink">
       </a>
-      <a href="https://styx-os.org/">
+      <a href="https://styx-os.org/" target="_blank">
         <img src="https://content.styx-os.org/file/data/73f4itz6w6nnfrfplylx/PHID-FILE-hk3ea2rb7yafrut3hmle/styx-8831-rounded.gif" alt="styx-os.org">
       </a>
-      <a href="https://lisanne.gay/">
+      <a href="https://lisanne.gay/" target="_blank">
         <img src="https://lisanne.gay/88x31_pls_DO_hotlink.png" alt="lisanne.gay">
       </a>
-      <a href="https://sudospective.net/">
+      <a href="https://sudospective.net/" target="_blank">
         <img src="https://sudospective.net/assets/badges/sudospective.png" alt="sudospective.net">
       </a>
-      <a href="https://meow-d.github.io/">
+      <a href="https://meow-d.github.io/" target="_blank">
         <img src="https://meow-d.github.io/assets/images/buttons/meow_d.webp" alt="meow-d.github.io">
       </a>
-      <a href="https://onz.ee/">
+      <a href="https://onz.ee/" target="_blank">
         <img src="https://onz.ee/assets/88x31s/avif/onzecki.avif" alt="onz.ee">
       </a>
-      <a href="https://temstuff.neocities.org/">
+      <a href="https://temstuff.neocities.org/" target="_blank">
         <img src="https://64.media.tumblr.com/5249466109a089aa220762aa2075205c/a51f6f9947d2d663-78/s100x200/16dfd414c2d035315f340988656362bebc79d515.gif" alt="temstuff.neocities.org">
       </a>
-      <a href="https://notnite.com/">
+      <a href="https://notnite.com/" target="_blank">
         <img src="https://notnite.com/buttons/notnite.png" alt="notnite.com">
       </a>
-      <a href="https://www.starundrscre.xyz/">
+      <a href="https://www.starundrscre.xyz/" target="_blank">
         <img src="https://www.starundrscre.xyz/assets/img/badges/starundrscre.gif" alt="starundrscre.xyz">
       </a>
-      <a href="https://racc.at/">
+      <a href="https://racc.at/" target="_blank">
         <img src="https://racc.at/media/uploads/88x31.png" alt="racc.at">
       </a>
-      <a href="https://canine.tools/">
+      <a href="https://canine.tools/" target="_blank">
         <img src="https://canine.tools/assets/images/badges/badge.png" alt="canine.tools">
       </a>
-      <a href="https://maia.crimew.gay/">
+      <a href="https://maia.crimew.gay/" target="_blank">
         <img src="https://maia.crimew.gay/badges/maia.crimew.gay.png" alt="maia.crimew.gay">
       </a>
-      <a href="https://lucastheguy.nekoweb.org/">
+      <a href="https://lucastheguy.nekoweb.org/" target="_blank">
         <img src="https://lucastheguy.nekoweb.org/images/button.gif" alt="lucas.nekoweb.org">
+      </a>
+      <a href="https://pghrt.diy/" target="_blank">
+        <img src="https://pghrt.diy/img/pghrt_88x31.png" alt="pghrt.diy">
       </a>
     </div>
     <div class="miscbuttons">
-      <!--<a href="https://sexfm.live/">
+      <!--<a href="https://sexfm.live/" target="_blank">
         <img style="width:150px; height:20px;" src="https://sexfm.live/ilovesexfm.gif" alt="sexfm.live">
       </a>-->
       <iframe src="https://internetphonebook.net/badges/dial-a-site-badge.html?number=153&size=small" width="228" height="54" frameborder="0" style="border: 1px solid #000;"></iframe>
@@ -338,7 +342,7 @@
     And here's a word from a johnvertisement!
   </article>
   <article who="nahua" emotion="lookdown"></article>
-  <iframe id="john" src="https://john.citrons.xyz/embed?ref=spax.zone"></iframe>
+  <iframe id="john" src="https://john.citrons.xyz/embed?ref=spax.zone"></iframe> <!--TODO: when in a dev environment, this shouldn't have a ref for me. it inflates the count. it should only add ?ref=spax.zone when built for prod-->
   <!--gonna put my johnvertisement here:
   <article who="nahua" emotion="smug" id="spaxjohn">
     <span class="r1">&lt;<span style="display:inline-block;transform:translateY(1.25px) scaleX(200%);margin-left:-3px;margin-right:10px;">-</span>THIS MOTHERSLUDGER</span> was turned into <span class="g3" style="display: inline-block; font-size: 30px; transform: translateY(20%); text-shadow: rgb(var(--g3v), 1) 0 1px 1px, rgb(var(--g3v), 0.75) 0 3px 2px, rgb(var(--g3v), 0.5) 0 7.5px 3px;">GOOP</span> <span style="font-size: 16px;">(find out how at <a href="https://spax.zone/">spax.zone</a>)</span>
