briefly update the gender blogpost for 2026

--- a/html/gender.html
+++ b/html/gender.html
@@ -4,6 +4,14 @@
   <title>My Recent Gender Journey</title>
   <meta name="description" content="got damn it really hits you like a truck">
   <link rel="stylesheet" href="/css/experimental.css">
+  <style>
+    #old-gender ~ .old-gender {
+      display: none;
+    }
+    #old-gender[open] ~ .old-gender {
+      display: block;
+    }
+  </style>
 </head>
 <body data-content="blog">
   <article class="short">
@@ -111,18 +119,61 @@
   <article who="nahua" emotion="joyful" id="jump-to-me-if-you-are-gay">
     Anyways, that's my story!
   </article>
-  <article who="nahua" emotion="bashful" id="gender">
-    I identify as bigender (having two genders): cis male irl, and non-binary online.
-  </article>
-  <article who="nahua" emotion="neutral" id="pronouns">
-    I go by <em hover="he/him or they/them">he/they</em> irl and <em>they/them</em> online, but if I know you well, you can optionally use <em>she/her</em> for me online.<br>
-  </article>
-  <article who="nahua" emotion="look">
-    (But don't worry if you get them wrong I'm pretty chill with pronouns)
+  <article>
+    [BRIEF EARLY 2026 UPDATE]
   </article>
   <article who="nahua" emotion="neutral">
+    Hey! Sorry for interrupting the flow here.
+  </article>
+  <article who="nahua" emotion="look">
+    I wanted to add a section as to not misinform how my current gender is.
+  </article>
+  <article who="nahua" emotion="expressionless">
+    My gender evolved quite a bit in 2025, and I was originally planning on making a yearly blogpost about how I felt about my gender.
+  </article>
+  <article who="nahua" emotion="disappointed">
+    Unfortunately, I got extremely burnt out after college started, and couldn't bring myself to finish a blogpost without the entire thing sounding off.
+  </article>
+  <article who="nahua" emotion="happy">
+    So I figured I'd at least try to set the record straight here, until I write another gender blogpost and completely overhaul my site.
+  </article>
+  <article who="nahua" emotion="bashful" id="gender">
+    As it CURRENTLY stands, I am just <em>non-binary</em>. Not bigender, not cis.
+  </article>
+  <article who="nahua" emotion="neutral" id="pronouns">
+    My pronouns are specifically <em>they/them</em>. Please try to use them.
+  </article>
+  <article who="nahua" emotion="bashful" id="trans">
+    I am officially transgender, not just gender non-conforming.
+  </article>
+  <article who="nahua" emotion="neutral" id="name">
+    Also, ONLY if you know me irl, please try call me by my new name, <em>Devyn</em> (or <em>Dev</em> as a nickname).
+  </article>
+  <article who="nahua" emotion="angry">
+    (No one online is allowed to call me this)
+  </article>
+  <article who="nahua" emotion="neutral">
+    That's about it for this update!
+  </article>
+  <article>
+    [END OF UPDATE]
+  </article>
+  <details id="old-gender">
+    <summary>(Old gender synopsis)</summary>
+  </details>
+  <article who="nahua" emotion="bashful" class="old-gender">
+    I identify as bigender (having two genders): cis male irl, and non-binary online.
+  </article>
+  <article who="nahua" emotion="neutral" class="old-gender">
+    I go by <em hover="he/him or they/them">he/they</em> irl and <em>they/them</em> online, but if I know you well, you can optionally use <em>she/her</em> for me online.<br>
+  </article>
+  <article who="nahua" emotion="look" class="old-gender">
+    (But don't worry if you get them wrong I'm pretty chill with pronouns)
+  </article>
+  <article who="nahua" emotion="neutral" class="old-gender">
     And I'll be identifying as gender non-conforming (gnc), rather than trans.
   </article>
+  <br class="old-gender">
   <article who="nahua" emotion="bashful">
     Thank you so much for reading! I hope sharing my journey can help others figure out theirs as well!
   </article>
