one facial change for nahua

--- a/html/index.html
+++ b/html/index.html
@@ -123,7 +123,7 @@
   <article who="claire" emotion="sigh">
     And let me guess.. you're gonna *blog* about your Github activity.
   </article>
-  <article who="nahua" emotion="angry">
+  <article who="nahua" emotion="look">
     I first need to dedicate a section of my site TO blogging-
   </article>
   <article who="claire" emotion="neutral">
