added jamie's button! :3

--- a/html/index.html
+++ b/html/index.html
@@ -319,6 +319,9 @@
       <a href="https://pghrt.diy/" target="_blank">
         <img src="https://pghrt.diy/img/pghrt_88x31.png" alt="pghrt.diy">
       </a>
+      <a href="https://jamiemakes.art">
+        <img src="https://jamiemakes.art/assets/button.gif" alt="jamiemakes.art">
+      </a>
     </div>
     <div class="miscbuttons">
       <!--<a href="https://sexfm.live/" target="_blank">
