add update tag to gender element

--- a/html/gender.html
+++ b/html/gender.html
@@ -119,7 +119,7 @@
   <article who="nahua" emotion="joyful" id="jump-to-me-if-you-are-gay">
     Anyways, that's my story!
   </article>
-  <article>
+  <article id="update">
     [BRIEF EARLY 2026 UPDATE]
   </article>
   <article who="nahua" emotion="neutral">
