fix m,cai webring thing

--- a/html/index.html
+++ b/html/index.html
@@ -173,7 +173,7 @@
   </article>
   <article id="mcai-webring" class="webring centertext short">
     part of the <span hover="man, computers are incredible">m,cai</span> webring<br><br>
-    <a href="https://coolstation.space/" class="nowrap">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://terezi.pyrope.net/" class="nowrap">-&gt;</a>
+    <a href="https://coolstation.space/" class="nowrap">&lt;-</a> <a href="https://terezi.pyrope.net/ring.html">everyone</a> <a href="https://terezi.pyrope.net/" class="nowrap">-&gt;</a>
   </article>
   <article id="muoring" class="webring centertext short">
     straight up in the muoring<br><br>
